tests/fixtures/valid/multi/imported_assert_fail/main.gcl
include lib().{ value };
import lib.{ always_fails };

node result: Dimensionless = @value + 1.0;
