tests/fixtures/errors/recursive_fn.gcl
// Error: recursive DAG instantiation detected
dag recurse {
    param x: Dimensionless;
    
    include recurse(x: 1.0) { result };
    
    node result: Dimensionless = @x;
}
include recurse(x: 1.0) { result };
